deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: java-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-app

  template:
    metadata:
      labels:
        app: java-app

    spec:
      containers:
        - name: java-app
          image: image-registry.openshift-image-registry.svc:5000/cicd-demo/java-app:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
