service.yaml
apiVersion: v1
kind: Service

metadata:
  name: springboot-demo

spec:
  selector:
    app: springboot-demo

  ports:
    - port: 80
      targetPort: 8080
