route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: springboot-demo

spec:
  to:
    kind: Service
    name: springboot-demo

  port:
    targetPort: 80
